{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 714,
  "lineage": "02b725fb-1908-c6ec-b5c9-071231ecc49b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0232717287c5ca0ce",
            "id": "rtb-0232717287c5ca0ce",
            "owner_id": "604807847334",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e228d0aaf845c90",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-demo-service-public"
            },
            "vpc_id": "vpc-00804a49fbccf40cb"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02e228d0aaf845c90",
            "owner_id": "604807847334",
            "tags": {
              "Name": "my-demo-service-internet-gateway"
            },
            "vpc_id": "vpc-00804a49fbccf40cb"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02e228d0aaf845c90",
            "id": "r-rtb-0232717287c5ca0ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0232717287c5ca0ce",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02e228d0aaf845c90",
            "id": "r-rtb-0232717287c5ca0ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0232717287c5ca0ce",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:604807847334:vpc/vpc-00804a49fbccf40cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-04f65b7c18c3cddbb",
            "default_route_table_id": "rtb-0232717287c5ca0ce",
            "default_security_group_id": "sg-0a51ce4f6d9beed42",
            "dhcp_options_id": "dopt-649c180f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00804a49fbccf40cb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0232717287c5ca0ce",
            "owner_id": "604807847334",
            "tags": {
              "Name": "my-demo-service-vpc"
            }
          }
        }
      ]
    }
  ]
}